users can be added to grp categories

--- a/client/src/app/components/navbar/navbar.component.html
+++ b/client/src/app/components/navbar/navbar.component.html
@@ -22,6 +22,8 @@
 		></p-button>
 	</div>
 	<p-button
+		pTooltip="Logout"
+		tooltipPosition="top"
 		icon="pi pi-sign-out"
 		class="align-content-end"
 		styleClass="p-button-rounded"
