--- a/client/src/app/pages/home/home.component.html
+++ b/client/src/app/pages/home/home.component.html
@@ -30,11 +30,64 @@
 		</div>
 		<div class="col-12 shadow-4 border-round-lg py-3 px-4">
 			<p class="text-4xl font-semibold mb-5">Bookmarks</p>
-			<div class="grid">
+			<div class="grid align-items-center">
 				<div *ngFor="let bookmark of bookmarkList" class="col-3">
 					<app-bookmark [bookmark]="bookmark"></app-bookmark>
+				</div>
+				<div *ngIf="bookmarkList.length < 8" class="max-w-min">
+					<button
+						pButton
+						(click)="showAddBookmarkDialog()"
+						class="p-button-rounded p-button-raised p-button-text p-1 pl-2 pt-1 max-w-min mb-1"
+					>
+						<i class="pi pi-plus p-1"></i>
+					</button>
+					<p class="text-center">Add</p>
 				</div>
 			</div>
 		</div>
 	</div>
 </div>
+
+<form [formGroup]="addBookmarkForm" (ngSubmit)="addBookmark()">
+	<p-dialog
+		header="Edit Category"
+		[(visible)]="isAddBookmarkDialogVisible"
+		[modal]="true"
+		[draggable]="false"
+		[resizable]="false"
+		[dismissableMask]="true"
+	>
+		<div class="field">
+			<label for="bookmarkTitle" class="font-medium text-lg"
+				>Bookmark Title</label
+			>
+			<input
+				formControlName="bookmarkTitle"
+				class="w-full"
+				id="bookmarkTitle"
+				type="text"
+				placeholder="Enter bookmark title"
+				pInputText
+			/>
+		</div>
+		<div class="field">
+			<label for="bookmarkLink" class="font-medium text-lg"
+				>Bookmark Link</label
+			>
+			<input
+				formControlName="bookmarkLink"
+				class="w-full"
+				id="bookmarkLink"
+				type="text"
+				placeholder="Paste the url of the bookmark"
+				pInputText
+			/>
+		</div>
+		<ng-template pTemplate="footer">
+			<button pButton type="submit" [disabled]="!addBookmarkForm.valid">
+				Add
+			</button>
+		</ng-template>
+	</p-dialog>
+</form>
