login works in backend and frontend

--- a/client/src/app/components/navbar/navbar.component.html
+++ b/client/src/app/components/navbar/navbar.component.html
@@ -12,7 +12,7 @@
 			styleClass="p-button-rounded"
 			routerLink="/{{
 				category.type === CategoryType.INDIV ? 'category' : 'group'
-			}}/{{ category.id }}"
+			}}/{{ category._id }}"
 		></p-button>
 		<p-button
 			icon="pi pi-plus"
