register works on frontend with paypal API

--- a/client/src/app/pages/login/login.component.html
+++ b/client/src/app/pages/login/login.component.html
@@ -39,5 +39,7 @@
 				Login
 			</button>
 		</form>
+		<br />
+		<p class="text-sm p-1 text-primary cursor-pointer" routerLink="/register">New here? Register now!</p>
 	</div>
 </div>
