Added profile page, update password works

--- a/client/src/app/components/navbar/navbar.component.html
+++ b/client/src/app/components/navbar/navbar.component.html
@@ -24,10 +24,10 @@
 	<p-button
 		pTooltip="Logout"
 		tooltipPosition="top"
-		icon="pi pi-sign-out"
+		icon="pi pi-user"
 		class="align-content-end"
 		styleClass="p-button-rounded"
-		routerLink="/login"
+		routerLink="/profile"
 	></p-button>
 </div>
 
