--- a/client/src/app/components/navbar/navbar.component.html
+++ b/client/src/app/components/navbar/navbar.component.html
@@ -22,7 +22,7 @@
 		></p-button>
 	</div>
 	<p-button
-		pTooltip="Logout"
+		pTooltip="User"
 		tooltipPosition="top"
 		icon="pi pi-user"
 		class="align-content-end"
