--- a/client/src/app/pages/category/category.component.html
+++ b/client/src/app/pages/category/category.component.html
@@ -1,6 +1,6 @@
 <div class="grid h-screen max-w-full gap-3 p-5">
 	<div class="h-full overflow-y-scroll col-8 shadow-4 border-round-lg py-3 px-4">
-		<p class="text-4xl font-semibold mb-5">{{ category?.name }}</p>
+		<p *ngIf="category" class="text-4xl font-semibold mb-5">{{ category.name }}</p>
 		<div class="flex justify-content-between align-items-center">
 			<p class="text-2xl font-medium">Tasks</p>
 			<p-button
