--- a/client/src/app/pages/group-category/group-category.component.html
+++ b/client/src/app/pages/group-category/group-category.component.html
@@ -1,7 +1,6 @@
 <div class="grid min-h-full max-w-full gap-3 p-5">
 	<div class="col-8 shadow-4 border-round-lg py-3 px-4">
-		<p class="text-4xl font-semibold mb-5">{{ category!.name }}</p>
-
+		<p *ngIf="category" class="text-4xl font-semibold mb-5">{{ category.name }}</p>
 		<div class="flex justify-content-between align-items-center">
 			<p class="text-2xl font-medium">Tasks</p>
 			<p-button
