category update & add/delete members works

--- a/client/src/app/pages/group-category/group-category.component.html
+++ b/client/src/app/pages/group-category/group-category.component.html
@@ -76,7 +76,7 @@
 					(click)="showAddMemberDialog()"
 				></p-button>
 			</div>
-			<div *ngFor="let member of category?.members">
+			<div *ngFor="let member of members">
 				<div
 					class="px-1 flex justify-content-between align-items-center"
 				>
