--- a/client/src/app/pages/category/category.component.html
+++ b/client/src/app/pages/category/category.component.html
@@ -10,21 +10,23 @@
 			></p-button>
 		</div>
 		<br />
-		<div
-			*ngIf="taskList.length === 0"
-			class="flex flex-column align-items-center justify-content-center w-full shadow-1 border-round-lg p-3"
-		>
-			<p class="font-medium mb-2">
-				<em>FINALLY</em>, some peace and quiet
-			</p>
-			<p class="text-xs">enjoy it while it lasts ;-;</p>
-		</div>
-
-		<div class="flex flex-column gap-3 p-1">
-			<app-task-container
-				*ngFor="let task of taskList"
-				[task]="task"
-			></app-task-container>
+		<div *ngIf="taskList">
+			<div
+				*ngIf="taskList.length === 0"
+				class="flex flex-column align-items-center justify-content-center w-full shadow-1 border-round-lg p-3"
+			>
+				<p class="font-medium mb-2">
+					<em>FINALLY</em>, some peace and quiet
+				</p>
+				<p class="text-xs">enjoy it while it lasts ;-;</p>
+			</div>
+			
+			<div class="flex flex-column gap-3 p-1">
+				<app-task-container
+					*ngFor="let task of taskList"
+					[task]="task"
+				></app-task-container>
+			</div>
 		</div>
 	</div>
 	<div class="grid col-4 gap-4">
@@ -47,7 +49,7 @@
 	</div>
 </div>
 
-<form [formGroup]="categorySettingsForm" (ngSubmit)="onEdit()">
+<form *ngIf="category" [formGroup]="categorySettingsForm" (ngSubmit)="onEdit()">
 	<p-dialog
 		header="Edit Category"
 		[(visible)]="isSettingsDialogVisible"
