--- a/client/src/app/components/bookmark/bookmark.component.html
+++ b/client/src/app/components/bookmark/bookmark.component.html
@@ -8,7 +8,7 @@
 		class="p-button-raised p-button-text p-1 pl-2 pt-2 max-w-min mb-1"
 	>
 		<p-image
-			src="http://www.google.com/s2/favicons?domain={{ bookmark.link }}"
+			src="http://www.google.com/s2/favicons?domain={{ bookmark.url }}"
 		></p-image>
 	</button>
 	<p class="text-center">{{ bookmark.title }}</p>
