--- a/client/src/app/pages/home/home.component.html
+++ b/client/src/app/pages/home/home.component.html
@@ -32,19 +32,25 @@
 		</div>
 		<div class="col-12 shadow-4 border-round-lg py-3 px-4">
 			<p class="text-4xl font-semibold mb-5">Bookmarks</p>
+			<div *ngIf="bookmarkList">
 			<div class="grid align-items-center">
-				<div (contextmenu)="deleteConfirm(bookmark, $event)" *ngFor="let bookmark of bookmarkList" class="col-3">
-					<app-bookmark [bookmark]="bookmark"></app-bookmark>
-				</div>
-				<div *ngIf="bookmarkList.length < 8" class="max-w-min">
-					<button
-						pButton
-						(click)="showAddBookmarkDialog()"
-						class="p-button-rounded p-button-raised p-button-text p-1 pl-2 pt-1 max-w-min mb-1"
+					<div
+						(contextmenu)="deleteConfirm(bookmark, $event)"
+						*ngFor="let bookmark of bookmarkList"
+						class="col-3"
 					>
-						<i class="pi pi-plus p-1"></i>
-					</button>
-					<p class="text-center">Add</p>
+						<app-bookmark [bookmark]="bookmark"></app-bookmark>
+					</div>
+					<div *ngIf="bookmarkList.length < 8" class="max-w-min">
+						<button
+							pButton
+							(click)="showAddBookmarkDialog()"
+							class="p-button-rounded p-button-raised p-button-text p-1 pl-2 pt-1 max-w-min mb-1"
+						>
+							<i class="pi pi-plus p-1"></i>
+						</button>
+						<p class="text-center">Add</p>
+					</div>
 				</div>
 			</div>
 		</div>
