--- a/client/src/app/components/task/task.component.html
+++ b/client/src/app/components/task/task.component.html
@@ -22,6 +22,7 @@
 	<p-dialog
 		header="Edit Task"
 		[(visible)]="isEditTaskDialogVisible"
+		(visibleChange)="onDialogVisibleChange($event)"
 		[modal]="true"
 		[draggable]="false"
 		[resizable]="false"
