--- a/client/src/app/pages/group-category/group-category.component.html
+++ b/client/src/app/pages/group-category/group-category.component.html
@@ -25,6 +25,7 @@
 
 			<div class="flex flex-column gap-3 p-1">
 				<app-task-container
+					(isEditing)="setIsEditing($event)"
 					*ngFor="let task of taskList"
 					[task]="task"
 				></app-task-container>
