--- a/client/src/app/pages/group-category/group-category.component.html
+++ b/client/src/app/pages/group-category/group-category.component.html
@@ -35,7 +35,7 @@
 	<div class="grid col-4 gap-4">
 		<div class="col-12 shadow-4 border-round-lg py-3 px-4">
 			<p class="text-4xl font-semibold mb-5">Whiteboard</p>
-			<p>Not functional as server is required</p>
+			<div id="comet-container"></div>
 		</div>
 		<div class="w-full">
 			<div class="cursor-pointer" (click)="showSettingsDialog()">
